--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <meta name="twitter:image" content="https://ronamerch.co%PUBLIC_URL%/logo.png" />
     <meta name="og:image" property="og:image" content="https://ronamerch.co%PUBLIC_URL%/logo.png" />
