--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
     <meta name="og:image" property="og:image" content="https://ronamerch.co%PUBLIC_URL%/logo.png" />
     <meta name="og:image:alt" content="Rona Merch Co. Logo" />
 
-    <meta name="description" content="The freshes face masks, t shirts, and branded merchandise around" />
-    <meta name="og:description" content="The freshes face masks, t shirts, and branded merchandise around" />
-    <meta name="twitter:description" content="The freshes face masks, t shirts, and branded merchandise around" />
+    <meta name="description" content="The freshest face masks, t shirts, and branded merchandise on the web. Fantastic products, amazing deals, stylish merch. " />
+    <meta name="og:description" content="The freshest face masks, t shirts, and branded merchandise on the web. Fantastic products, amazing deals, stylish merch. " />
+    <meta name="twitter:description" content="The freshest face masks, t shirts, and branded merchandise on the web. Fantastic products, amazing deals, stylish merch. " />
 
     <meta name="keywords" content="covid, covid-19, covid19, covid 19, rona, merch, co., rona merch co., coronavirus, face, mask, masks, face mask, facemask, facemasks, branding, brand, wwg1wga, qanon, 5g, btc, eth, fastcash, friendworld, ecommerce, protective gear, pandemic, quarantine, georgism, patriot, patriot portal, safety swag, safety, branded merch, branded, bargain, bargain bin" />
 
