--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="HandheldFriendly" content="true">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="theme-color" content="#FFFFFF" />
+    <meta id="header-theme" name="theme-color" content="#FFFFFF" />
     <meta
       name="description"
       content="Rona Merch Co. is now OPEN FOR BUSINESS"
